# dhi

./: .gitignore  .zigrep_archive  ADR.md  AGENT.md  AGENTS.md  CLAUDE.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DHI_API_REFERENCE.md  DOCS.md  MIGRATION.md  PR.md  README.md  RELEASE.md  RELEASING.md  SUMMARY.md  TODO.md  bench_validators.py  build.zig  bun.lockb  codedb.snapshot  example.ts  jest.config.ts  llm.md  package-lock.json  package.json  performance_report.html  simple_ultra_test.js  tsconfig.esm.json  tsconfig.json  ultra_benchmark.js
.github/: pull_request_template.md
.github/workflows/: benchmarks.yml  build-wheels.yml  ci.yml  publish-npm.yml  publish.yml  release.yml
benchmarks/: benchmark.zig  benchmark5.ts  benchmark_any.ts  benchmark_optimized.ts  comprehensive.ts  generalization_tests.ts  hyper_optimized_benchmark.ts  json_batch_hot_paths.zig  optimization_benchmark.ts  parallel_nested.ts  parallel_nested_worker.mjs  performance_visualizer.ts  quick_invalid_bench.ts  realworld.ts  rust_benchmark.ts  typed-api.ts  typed_vs_wasm.cjs  typed_vs_wasm.mjs  typed_vs_wasm.ts  zod4_comparison.ts
conversations/: 2025-09-02-hybrid-and-zod-compat-notes.md
docs/: TODO.md
docs/adr/: 0001-zod-compatibility-layer.md  0002-native-typed-api.md  0002-reduce-property-access-cost.md  0002-simd-batch-validation-optimizations.md  0003-wasm-init-and-distribution.md  0004-benchmarking-methodology.md  0005-migration-and-deprecation.md  0006-validation-core-and-type-encoding.md  0007-deeply-nested-fast-path.md  0008-reduce-property-access-cost.md  0009-bundler-sideeffects-normalization.md  0009-native-build-flags-performance.md  0010-wasm-threading-parallel-validation.md
envoy-example/: Dockerfile  README.md  dhi-envoy.wasm  docker-compose.yml  envoy.yaml  test.sh
examples/: advanced_example.zig  basic_usage.zig  hybrid.mjs  hybrid.ts  json_example.zig  model_example.zig
frontend/: bun.lockb  next.config.mjs  next.config.ts  package.json
frontend2/: next.config.ts  package.json
js-bindings/: CHANGELOG.md  CLAUDE.md  NEXTJS.md  README.md  benchmark-simd.ts  benchmark-vs-zod.ts  dhi.wasm  generate-charts.ts  index.ts  package-lock.json  package.json  schema-cloudflare.ts  schema-edge.ts  schema-napi.ts  schema-nextjs-edge.ts  schema-turbo.ts  schema.ts  skills.md  test-yuku.ts  test-zod4-compat.ts  test-zod4-new-features.ts  ts-to-dhi-oxc.ts  ts-to-dhi-prototype.ts  ts-to-dhi.ts  tsconfig.build.json  tsconfig.json  types.d.ts
migrations/: README.md  benchmark-comparison.ts  package.json
python-bindings/: .gitignore  README.md  benchmark_1to1.py  pyproject.toml  setup.py  skills.md
python-bindings/benchmarks/: benchmark_json_parse.py  benchmark_model_creation.py  benchmark_single_item.py  benchmark_vs_all.py
python-bindings/dhi/: __init__.py  _native.c  batch.py  config.py  constraints.py  datetime_types.py  fields.py  functional_validators.py  model.py  networks.py  schema_import.py  secret.py  special_types.py  struct.py  types.py  validator.py
python-bindings/dhi-skill/: SKILL.md
python-bindings/dhi.egg-info/: PKG-INFO  SOURCES.txt
python-bindings/tests/: test_edge_cases.py  test_fast_construct.py  test_from_json.py  test_future_annotations.py  test_int_float_and_freethreading.py  test_pydantic_parity.py  test_regression_benchmarks.py  test_schema_import.py
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
scripts/: bench_deep_nested.js  bench_deep_nested.ts  build.sh
src/: c_api.zig  core.ts  dhi_core.d.ts  envoy_wasm_filter.zig  hybrid.ts  hyper_optimizations.ts  index.ts  json_batch_validator.zig  json_validator.zig  optimized-core.ts  rust-bridge.ts  simd_json_parser.zig  simd_string.zig  simd_validators.zig  typed.ts  typed_clean.ts  typed_optimized.ts  wasm.ts  wasm_api.zig  zod-compat.ts
tests/: hybrid.test.ts  typed-api.test.ts  zod-compat.test.ts
typescript-runtime-type-benchmarks/: README.md
(+114 files in other folders)
