[build-system]
requires = ["setuptools>=77.0.0", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dhi"
version = "1.5.0"
description = "Ultra-fast data validation for Python - 33M+ rows/sec, powered by Zig"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rach Pradhan", email = "rach@rachpradhan.com"}
]
keywords = [
    "validation", "data-validation", "pydantic", "zig", "performance", 
    "fast", "validator", "email", "url", "uuid", "schema"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Other",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/justrach/dhi"
Documentation = "https://github.com/justrach/dhi#readme"
Repository = "https://github.com/justrach/dhi"
Issues = "https://github.com/justrach/dhi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]
